; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mprintf.c_curl_mvaprintf.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mprintf.c_curl_mvaprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asprintf = type { i8*, i64, i64, i64 }

@alloc_addbyter = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @curl_mvaprintf(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.asprintf, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 0
  store i8* null, i8** %8, align 8
  %9 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @alloc_addbyter, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @dprintf_formatf(%struct.asprintf* %7, i32 %12, i8* %13, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp eq i32 -1, %16
  br i1 %17, label %22, label %18

18:                                               ; preds = %2
  %19 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 3
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %18, %2
  %23 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 0
  %28 = load i8*, i8** %27, align 8
  %29 = call i32 @free(i8* %28)
  br label %30

30:                                               ; preds = %26, %22
  store i8* null, i8** %3, align 8
  br label %45

31:                                               ; preds = %18
  %32 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %43

35:                                               ; preds = %31
  %36 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 0
  %37 = load i8*, i8** %36, align 8
  %38 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds i8, i8* %37, i64 %39
  store i8 0, i8* %40, align 1
  %41 = getelementptr inbounds %struct.asprintf, %struct.asprintf* %7, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  store i8* %42, i8** %3, align 8
  br label %45

43:                                               ; preds = %31
  %44 = call i8* @strdup(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %44, i8** %3, align 8
  br label %45

45:                                               ; preds = %43, %35, %30
  %46 = load i8*, i8** %3, align 8
  ret i8* %46
}

declare dso_local i32 @dprintf_formatf(%struct.asprintf*, i32, i8*, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
